--- a/src/cloudsc_gpu/CMakeLists.txt
+++ b/src/cloudsc_gpu/CMakeLists.txt
@@ -22,7 +22,7 @@ if( HAVE_CLOUDSC_GPU_NAIVE )
     )
     target_link_libraries( dwarf-cloudsc-gpu-naive PRIVATE cloudsc-common-lib )
 
-    if( TARGET OpenACC::OpenACC_Fortran )
+    if( HAVE_ACC AND TARGET OpenACC::OpenACC_Fortran )
         target_link_libraries( dwarf-cloudsc-gpu-naive PRIVATE OpenACC::OpenACC_Fortran )
     endif()
 endif()
@@ -40,7 +40,7 @@ if( HAVE_CLOUDSC_GPU_CLAW )
     )
     target_link_libraries( dwarf-cloudsc-gpu-claw PRIVATE cloudsc-common-lib )
 
-    if( TARGET OpenACC::OpenACC_Fortran )
+    if( HAVE_ACC AND TARGET OpenACC::OpenACC_Fortran )
         target_link_libraries( dwarf-cloudsc-gpu-claw PRIVATE OpenACC::OpenACC_Fortran )
     endif()
 endif()
