--- a/src/cloudsc_loki/cloudsc_loki.config
+++ b/src/cloudsc_loki/cloudsc_loki.config
@@ -22,3 +22,8 @@ size = 'KLON'
 index = 'JL'
 bounds = ['KIDIA', 'KFDIA']
 aliases = ['NPROMA', 'KDIM%KLON']
+
+[[dimension]]
+name = 'vertical'
+size = 'KLEV'
+index = 'JK'
