Squashed commit of the following:
- Move cloudsc_global_state_mod to common module
- Add new cloudsc_mpi_mod to encapsulate a small subset of MPI calls and provide fallback interface in the absence of MPI
- Enable optional MPI support in cloudsc_fortran and cloudsc_gpu variants
- Add new hdf5_file_mod to encapsulate reading from HDF5 files as a drop-in replacement of Serialbox. This works transparently in all variants that use load_array_mod for reading input data.
- Using MPI and HDF5 together takes care of partitioning the input file among the available processes.

--- a/bundle.yml
+++ b/bundle.yml
@@ -45,6 +45,10 @@ options :
             ENABLE_CLOUDSC_GPU_NAIVE=ON
             ENABLE_CLOUDSC_GPU_CLAW=ON
 
+    - with-mpi :
+        help  : Enable MPI-parallel kernel
+        cmake : ENABLE_MPI=ON
+
     - with-loki :
         help  : Enable Loki/CLAW source-to-source transformations
         cmake : ENABLE_CLOUDSC_LOKI=ON
@@ -76,6 +80,16 @@ options :
     - cloudsc-loki :
         help  : Build the optimized CLAW-based GPU version CLOUDSC  [ON|OFF]
         cmake : ENABLE_CLOUDSC_LOKI={{value}}
+
+    - hdf5 :
+        help : Enable use of HDF5 input file [ON|OFF]
+        cmake : ENABLE_HDF5={{value}}
+
+    - with-hdf5 :
+        help : Enable use of HDF5 input file (disables Serialbox)
+        cmake : >
+            ENABLE_HDF5=ON
+            CMAKE_DISABLE_FIND_PACKAGE_Serialbox=TRUE
 
     - without-serialbox :
         help  : Disable Serialbox utility for platform-agnostic file I/O
