--- a/src/cloudsc_fortran/CMakeLists.txt
+++ b/src/cloudsc_fortran/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Define this dwarf variant as an ECBuild feature
 ecbuild_add_option( FEATURE CLOUDSC_FORTRAN
     DESCRIPTION "Build the new Fortran version CLOUDSC using Serialbox" DEFAULT ON
-    CONDITION Serialbox_FOUND
+    CONDITION Serialbox_FOUND OR HDF5_FOUND
 )
 
 if( HAVE_CLOUDSC_FORTRAN )
@@ -10,7 +10,6 @@ if( HAVE_CLOUDSC_FORTRAN )
     ecbuild_add_executable( TARGET dwarf-cloudsc-fortran
         SOURCES
             dwarf_cloudsc.F90
-            cloudsc_global_state_mod.F90
             cloudsc_driver_mod.F90
             cloudsc.F90
         DEFINITIONS ${CLOUDSC_DEFINITIONS}
@@ -21,7 +20,20 @@ if( HAVE_CLOUDSC_FORTRAN )
         target_link_libraries( dwarf-cloudsc-fortran PRIVATE OpenMP::OpenMP_Fortran )
     endif()
 
+    if( HAVE_MPI AND TARGET MPI::MPI_Fortran )
+        target_link_libraries( dwarf-cloudsc-fortran PRIVATE MPI::MPI_Fortran )
+    endif()
+
     # Create symlink for the input data
-    execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
-        ${CMAKE_CURRENT_SOURCE_DIR}/../../data ${CMAKE_CURRENT_BINARY_DIR}/../../../data )
+    if( HAVE_SERIALBOX )
+      execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+          ${CMAKE_CURRENT_SOURCE_DIR}/../../data ${CMAKE_CURRENT_BINARY_DIR}/../../../data )
+    endif()
+
+    if( HAVE_HDF5 )
+      execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+          ${CMAKE_CURRENT_SOURCE_DIR}/../../config-files/input.h5 ${CMAKE_CURRENT_BINARY_DIR}/../../../input.h5 )
+      execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+          ${CMAKE_CURRENT_SOURCE_DIR}/../../config-files/reference.h5 ${CMAKE_CURRENT_BINARY_DIR}/../../../reference.h5 )
+    endif()
 endif()
