--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -17,6 +17,8 @@ ecbuild_add_library( TARGET cloudsc-common-lib
         module/ec_pmon_mod.F90
         module/load_array_mod.F90
         module/validate_mod.F90
+        module/cloudsc_global_state_mod.F90
+        module/cloudsc_mpi_mod.F90
     DEFINITIONS ${CLOUDSC_DEFINITIONS}
 )
 target_include_directories( cloudsc-common-lib PUBLIC $<INSTALL_INTERFACE:include> )
@@ -25,6 +27,16 @@ target_include_directories( cloudsc-common-lib PUBLIC $<BUILD_INTERFACE:${CMAKE_
 
 if( HAVE_OMP AND TARGET OpenMP::OpenMP_Fortran )
     target_link_libraries( cloudsc-common-lib PRIVATE OpenMP::OpenMP_Fortran )
+endif()
+
+if( HAVE_MPI AND TARGET MPI::MPI_Fortran )
+    target_link_libraries( cloudsc-common-lib PRIVATE MPI::MPI_Fortran )
+endif()
+
+if ( HAVE_HDF5 )
+    target_sources( cloudsc-common-lib PRIVATE module/hdf5_file_mod.F90 )
+    target_include_directories( cloudsc-common-lib PRIVATE ${HDF5_Fortran_INCLUDE_DIRS} )
+    target_link_libraries( cloudsc-common-lib PRIVATE ${HDF5_LIBRARIES} )
 endif()
 
 if( TARGET Serialbox::Serialbox_Fortran )
