Loki: Add second SCC variant with hoisted column arrays

--- a/src/cloudsc_loki/cloudsc_loki.config
+++ b/src/cloudsc_loki/cloudsc_loki.config
@@ -27,3 +27,8 @@ aliases = ['NPROMA', 'KDIM%KLON']
 name = 'vertical'
 size = 'KLEV'
 index = 'JK'
+
+[[dimension]]
+name = 'block_dim'
+size = 'NGPBLKS'
+index = 'IBL'
