--- a/src/cloudsc_loki/CMakeLists.txt
+++ b/src/cloudsc_loki/CMakeLists.txt
@@ -214,6 +214,47 @@ if( HAVE_CLOUDSC_LOKI )
     endif()
 
 
+    ####################################################
+    ##  SCC-hoist mode                                ##
+    ##   * SCC with vector loop hoisted               ##
+    ##   * Kernel is "seq, but args are full blocks   ##
+    ##   * Temporary arrays hoisted to driver         ##
+    ####################################################
+    add_custom_command(
+        OUTPUT
+            loki-scc-hoist/cloudsc.scc_hoist.F90
+            loki-scc-hoist/cloudsc_driver_loki_mod.scc_hoist.F90
+        COMMAND mkdir -p ${CMAKE_CURRENT_BINARY_DIR}/loki-scc-hoist
+        COMMAND loki-transform.py convert --mode scc-hoist --frontend ${LOKI_FRONTEND}
+                      --config ${CMAKE_CURRENT_SOURCE_DIR}/cloudsc_loki.config
+                      --path ${CMAKE_CURRENT_SOURCE_DIR}
+                      --header ${COMMON_MODULE}/yomphyder.F90
+                      --cpp --define CLOUDSC_GPU_TIMING --define CLOUDSC_STMT_FUNC
+                      --data-offload --remove-openmp
+                      --xmod ${XMOD_DIR}
+                      --out-path ${CMAKE_CURRENT_BINARY_DIR}/loki-scc-hoist
+        DEPENDS cloudsc.F90 cloudsc_driver_loki_mod.F90
+	COMMENT "[Loki] Pre-processing: mode=scc-hoist frontend=${LOKI_FRONTEND}"
+    )
+
+    ecbuild_add_executable( TARGET dwarf-cloudsc-loki-scc-hoist
+        SOURCES
+            dwarf_cloudsc.F90
+            loki-scc-hoist/cloudsc_driver_loki_mod.scc_hoist.F90
+            loki-scc-hoist/cloudsc.scc_hoist.F90
+        DEFINITIONS ${CLOUDSC_DEFINITIONS}
+    )
+    if( TARGET OpenMP::OpenMP_Fortran )
+        target_link_libraries( dwarf-cloudsc-loki-scc-hoist PRIVATE OpenMP::OpenMP_Fortran )
+    endif()
+    if( TARGET OpenACC::OpenACC_Fortran )
+        target_link_libraries( dwarf-cloudsc-loki-scc-hoist PRIVATE OpenACC::OpenACC_Fortran )
+        target_link_libraries( dwarf-cloudsc-loki-scc-hoist PRIVATE cloudsc-common-lib-static )
+    else()
+        target_link_libraries( dwarf-cloudsc-loki-scc-hoist PRIVATE cloudsc-common-lib )
+    endif()
+
+
     ##############################################################################
     # C-transpilation mode for generating vectorized C host code (experimental!)
     ##############################################################################
