Serialbox: Supress Serialbox builds under `--without-serialbox`

--- a/bundle.yml
+++ b/bundle.yml
@@ -93,7 +93,9 @@ options :
 
     - without-serialbox :
         help  : Disable Serialbox utility for platform-agnostic file I/O
-        cmake : CMAKE_DISABLE_FIND_PACKAGE_Serialbox=TRUE
+        cmake : >
+            CMAKE_DISABLE_FIND_PACKAGE_Serialbox=TRUE
+            BUILD_serialbox=OFF
 
     - serialbox-experimental :
         help  : Enable Serialbox experimental filesystem [ON|OFF]
