GPU: Consolidate outer dwarf root source and rename naive->kernels

--- a/src/cloudsc_gpu/CMakeLists.txt
+++ b/src/cloudsc_gpu/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Define the naive GPU dwarf variant as an ECBuild feature
-ecbuild_add_option( FEATURE CLOUDSC_GPU_NAIVE
+ecbuild_add_option( FEATURE CLOUDSC_GPU_KERNELS
     DESCRIPTION "Build naive GPU version of CLOUDSC using `!$acc kernels`" DEFAULT OFF
     CONDITION Serialbox_FOUND OR HDF5_FOUND
 )
@@ -10,23 +10,23 @@ ecbuild_add_option( FEATURE CLOUDSC_GPU_CLAW
     CONDITION Serialbox_FOUND OR HDF5_FOUND
 )
 
-if( HAVE_CLOUDSC_GPU_NAIVE )
+if( HAVE_CLOUDSC_GPU_KERNELS )
     ecbuild_add_executable(
-        TARGET dwarf-cloudsc-gpu-naive
+        TARGET dwarf-cloudsc-gpu-kernels
         SOURCES
-            dwarf_cloudsc_gpu_naive.F90
-            cloudsc_driver_gpu_naive_mod.F90
+            dwarf_cloudsc_gpu.F90
+            cloudsc_driver_gpu_kernels_mod.F90
             cloudsc_acc_kernels_mod.F90
-        DEFINITIONS ${CLOUDSC_DEFINITIONS}
+        DEFINITIONS ${CLOUDSC_DEFINITIONS} CLOUDSC_GPU_KERNELS
     )
-    target_link_libraries( dwarf-cloudsc-gpu-naive PRIVATE cloudsc-common-lib )
+    target_link_libraries( dwarf-cloudsc-gpu-kernels PRIVATE cloudsc-common-lib )
 
     if( HAVE_ACC AND TARGET OpenACC::OpenACC_Fortran )
-        target_link_libraries( dwarf-cloudsc-gpu-naive PRIVATE OpenACC::OpenACC_Fortran )
+        target_link_libraries( dwarf-cloudsc-gpu-kernels PRIVATE OpenACC::OpenACC_Fortran )
     endif()
 
     if( HAVE_MPI AND TARGET MPI::MPI_Fortran )
-        target_link_libraries( dwarf-cloudsc-gpu-naive PRIVATE MPI::MPI_Fortran )
+        target_link_libraries( dwarf-cloudsc-gpu-kernels PRIVATE MPI::MPI_Fortran )
     endif()
 endif()
 
@@ -35,10 +35,10 @@ if( HAVE_CLOUDSC_GPU_CLAW )
     ecbuild_add_executable(
         TARGET dwarf-cloudsc-gpu-claw
         SOURCES
-            dwarf_cloudsc_gpu_claw.F90
+            dwarf_cloudsc_gpu.F90
             cloudsc_driver_gpu_claw_mod.F90
             cloudsc.claw.gpu.F90
-        DEFINITIONS ${CLOUDSC_DEFINITIONS}
+        DEFINITIONS ${CLOUDSC_DEFINITIONS} CLOUDSC_GPU_CLAW
     )
     target_link_libraries( dwarf-cloudsc-gpu-claw PRIVATE cloudsc-common-lib )
 
@@ -50,6 +50,7 @@ if( HAVE_CLOUDSC_GPU_CLAW )
         target_link_libraries( dwarf-cloudsc-gpu-claw PRIVATE MPI::MPI_Fortran )
     endif()
 endif()
+
 
 # Create symlink for the input data
 if( HAVE_SERIALBOX )
