--- a/bundle.yml
+++ b/bundle.yml
@@ -40,9 +40,9 @@ options :
         cmake : ENABLE_SINGLE_PRECISION=ON
 
     - with-gpu :
-        help  : Enable GPU kernel (naive and CLAW-based)
+        help  : Enable GPU kernel (ACC kernels and CLAW-based)
         cmake : >
-            ENABLE_CLOUDSC_GPU_NAIVE=ON
+            ENABLE_CLOUDSC_GPU_KERNELS=ON
             ENABLE_CLOUDSC_GPU_CLAW=ON
 
     - with-mpi :
@@ -69,9 +69,9 @@ options :
         help  : Build the C version of CLOUDSC [ON|OFF]
         cmake : ENABLE_CLOUDSC_C={{value}}
 
-    - cloudsc-gpu-naive :
+    - cloudsc-gpu-kernels :
         help  : Build the naive GPU version CLOUDSC (!$acc kernels) [ON|OFF]
-        cmake : ENABLE_CLOUDSC_GPU_NAIVE={{value}}
+        cmake : ENABLE_CLOUDSC_GPU_KERNELS={{value}}
 
     - cloudsc-gpu-claw :
         help  : Build the optimized CLAW-based GPU version CLOUDSC  [ON|OFF]
