GPU: Add SCC-style standalone GPU version (single column coalesced)
A different version of GPU style looping code that hoists the outer
gang loop to the block loop and treats the kernel as vector parallel.
This is closer to the natural loop/memory blocking style of the IFS,
but presevers the loop-nest inversion inside the kernel to ensure
coalesced memory accesses.

--- a/bundle.yml
+++ b/bundle.yml
@@ -44,6 +44,7 @@ options :
         cmake : >
             ENABLE_CLOUDSC_GPU_KERNELS=ON
             ENABLE_CLOUDSC_GPU_CLAW=ON
+            ENABLE_CLOUDSC_GPU_SCC=ON
 
     - with-mpi :
         help  : Enable MPI-parallel kernel
