GPU: Add new variant with SCC-hoist format (faster than SCC)
This adds explicit hoisting of multi-dimensional array temporaries
to the driver routine for explicit device-side allocation. This
significantly improves performance over SCC.

--- a/bundle.yml
+++ b/bundle.yml
@@ -45,6 +45,7 @@ options :
             ENABLE_CLOUDSC_GPU_KERNELS=ON
             ENABLE_CLOUDSC_GPU_CLAW=ON
             ENABLE_CLOUDSC_GPU_SCC=ON
+            ENABLE_CLOUDSC_GPU_SCC_HOIST=ON
 
     - with-mpi :
         help  : Enable MPI-parallel kernel
